R240_Programming_Language_Translation/2021Jan1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba ';'
    2        | naredba ';'

    3 naredba: PRINT_T '(' izraz ')'
    4        | PRINT_T '(' LISTA ')'
    5        | PROMENLJIVA '=' izraz
    6        | LISTA '=' lista_el
    7        | izraz

    8 lista_el: '[' elementi ']'

    9 elementi: elementi ',' izraz
   10         | izraz

   11 izraz: izraz '+' izraz
   12      | izraz '-' izraz
   13      | BROJ '*' izraz
   14      | izraz '*' BROJ
   15      | '(' izraz ')'
   16      | ugao
   17      | PROMENLJIVA
   18      | komplementni
   19      | suplementni

   20 komplementni: KOM_T '(' LISTA ')'
   21             | KOM_T '(' izraz ')'

   22 suplementni: SUP_T '(' LISTA ')'
   23            | SUP_T '(' izraz ')'

   24 ugao: '<' BROJ ',' BROJ ',' BROJ '>'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 4 15 20 21 22 23
    ')' (41) 3 4 15 20 21 22 23
    '*' (42) 13 14
    '+' (43) 11
    ',' (44) 9 24
    '-' (45) 12
    ';' (59) 1 2
    '<' (60) 24
    '=' (61) 5 6
    '>' (62) 24
    '[' (91) 8
    ']' (93) 8
    error (256)
    PRINT_T (258) 3 4
    KOM_T (259) 20 21
    SUP_T (260) 22 23
    BROJ <v> (261) 13 14 24
    PROMENLJIVA <ime> (262) 5 17
    LISTA <ime> (263) 4 6 20 22


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    program (22)
        on left: 1 2
        on right: 0 1
    naredba (23)
        on left: 3 4 5 6 7
        on right: 1 2
    lista_el <ug> (24)
        on left: 8
        on right: 6
    elementi <ug> (25)
        on left: 9 10
        on right: 8 9
    izraz <ug> (26)
        on left: 11 12 13 14 15 16 17 18 19
        on right: 3 5 7 9 10 11 12 13 14 15 21 23
    komplementni <ug> (27)
        on left: 20 21
        on right: 18
    suplementni <ug> (28)
        on left: 22 23
        on right: 19
    ugao <ug> (29)
        on left: 24
        on right: 16


State 0

    0 $accept: . program $end

    PRINT_T      shift, and go to state 1
    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 5
    LISTA        shift, and go to state 6
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    program       go to state 9
    naredba       go to state 10
    izraz         go to state 11
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 1

    3 naredba: PRINT_T . '(' izraz ')'
    4        | PRINT_T . '(' LISTA ')'

    '('  shift, and go to state 15


State 2

   20 komplementni: KOM_T . '(' LISTA ')'
   21             | KOM_T . '(' izraz ')'

    '('  shift, and go to state 16


State 3

   22 suplementni: SUP_T . '(' LISTA ')'
   23            | SUP_T . '(' izraz ')'

    '('  shift, and go to state 17


State 4

   13 izraz: BROJ . '*' izraz

    '*'  shift, and go to state 18


State 5

    5 naredba: PROMENLJIVA . '=' izraz
   17 izraz: PROMENLJIVA .

    '='  shift, and go to state 19

    $default  reduce using rule 17 (izraz)


State 6

    6 naredba: LISTA . '=' lista_el

    '='  shift, and go to state 20


State 7

   15 izraz: '(' . izraz ')'

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 22
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 8

   24 ugao: '<' . BROJ ',' BROJ ',' BROJ '>'

    BROJ  shift, and go to state 23


State 9

    0 $accept: program . $end
    1 program: program . naredba ';'

    $end         shift, and go to state 24
    PRINT_T      shift, and go to state 1
    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 5
    LISTA        shift, and go to state 6
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    naredba       go to state 25
    izraz         go to state 11
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 10

    2 program: naredba . ';'

    ';'  shift, and go to state 26


State 11

    7 naredba: izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29

    $default  reduce using rule 7 (naredba)


State 12

   18 izraz: komplementni .

    $default  reduce using rule 18 (izraz)


State 13

   19 izraz: suplementni .

    $default  reduce using rule 19 (izraz)


State 14

   16 izraz: ugao .

    $default  reduce using rule 16 (izraz)


State 15

    3 naredba: PRINT_T '(' . izraz ')'
    4        | PRINT_T '(' . LISTA ')'

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    LISTA        shift, and go to state 30
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 31
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 16

   20 komplementni: KOM_T '(' . LISTA ')'
   21             | KOM_T '(' . izraz ')'

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    LISTA        shift, and go to state 32
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 33
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 17

   22 suplementni: SUP_T '(' . LISTA ')'
   23            | SUP_T '(' . izraz ')'

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    LISTA        shift, and go to state 34
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 35
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 18

   13 izraz: BROJ '*' . izraz

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 36
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 19

    5 naredba: PROMENLJIVA '=' . izraz

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 37
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 20

    6 naredba: LISTA '=' . lista_el

    '['  shift, and go to state 38

    lista_el  go to state 39


State 21

   17 izraz: PROMENLJIVA .

    $default  reduce using rule 17 (izraz)


State 22

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ
   15      | '(' izraz . ')'

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    ')'  shift, and go to state 40


State 23

   24 ugao: '<' BROJ . ',' BROJ ',' BROJ '>'

    ','  shift, and go to state 41


State 24

    0 $accept: program $end .

    $default  accept


State 25

    1 program: program naredba . ';'

    ';'  shift, and go to state 42


State 26

    2 program: naredba ';' .

    $default  reduce using rule 2 (program)


State 27

   11 izraz: izraz '+' . izraz

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 43
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 28

   12 izraz: izraz '-' . izraz

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 44
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 29

   14 izraz: izraz '*' . BROJ

    BROJ  shift, and go to state 45


State 30

    4 naredba: PRINT_T '(' LISTA . ')'

    ')'  shift, and go to state 46


State 31

    3 naredba: PRINT_T '(' izraz . ')'
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    ')'  shift, and go to state 47


State 32

   20 komplementni: KOM_T '(' LISTA . ')'

    ')'  shift, and go to state 48


State 33

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ
   21 komplementni: KOM_T '(' izraz . ')'

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    ')'  shift, and go to state 49


State 34

   22 suplementni: SUP_T '(' LISTA . ')'

    ')'  shift, and go to state 50


State 35

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ
   23 suplementni: SUP_T '(' izraz . ')'

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29
    ')'  shift, and go to state 51


State 36

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | BROJ '*' izraz .
   14      | izraz . '*' BROJ

    $default  reduce using rule 13 (izraz)


State 37

    5 naredba: PROMENLJIVA '=' izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29

    $default  reduce using rule 5 (naredba)


State 38

    8 lista_el: '[' . elementi ']'

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    elementi      go to state 52
    izraz         go to state 53
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 39

    6 naredba: LISTA '=' lista_el .

    $default  reduce using rule 6 (naredba)


State 40

   15 izraz: '(' izraz ')' .

    $default  reduce using rule 15 (izraz)


State 41

   24 ugao: '<' BROJ ',' . BROJ ',' BROJ '>'

    BROJ  shift, and go to state 54


State 42

    1 program: program naredba ';' .

    $default  reduce using rule 1 (program)


State 43

   11 izraz: izraz . '+' izraz
   11      | izraz '+' izraz .
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '*'  shift, and go to state 29

    $default  reduce using rule 11 (izraz)


State 44

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   12      | izraz '-' izraz .
   14      | izraz . '*' BROJ

    '*'  shift, and go to state 29

    $default  reduce using rule 12 (izraz)


State 45

   14 izraz: izraz '*' BROJ .

    $default  reduce using rule 14 (izraz)


State 46

    4 naredba: PRINT_T '(' LISTA ')' .

    $default  reduce using rule 4 (naredba)


State 47

    3 naredba: PRINT_T '(' izraz ')' .

    $default  reduce using rule 3 (naredba)


State 48

   20 komplementni: KOM_T '(' LISTA ')' .

    $default  reduce using rule 20 (komplementni)


State 49

   21 komplementni: KOM_T '(' izraz ')' .

    $default  reduce using rule 21 (komplementni)


State 50

   22 suplementni: SUP_T '(' LISTA ')' .

    $default  reduce using rule 22 (suplementni)


State 51

   23 suplementni: SUP_T '(' izraz ')' .

    $default  reduce using rule 23 (suplementni)


State 52

    8 lista_el: '[' elementi . ']'
    9 elementi: elementi . ',' izraz

    ']'  shift, and go to state 55
    ','  shift, and go to state 56


State 53

   10 elementi: izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29

    $default  reduce using rule 10 (elementi)


State 54

   24 ugao: '<' BROJ ',' BROJ . ',' BROJ '>'

    ','  shift, and go to state 57


State 55

    8 lista_el: '[' elementi ']' .

    $default  reduce using rule 8 (lista_el)


State 56

    9 elementi: elementi ',' . izraz

    KOM_T        shift, and go to state 2
    SUP_T        shift, and go to state 3
    BROJ         shift, and go to state 4
    PROMENLJIVA  shift, and go to state 21
    '('          shift, and go to state 7
    '<'          shift, and go to state 8

    izraz         go to state 58
    komplementni  go to state 12
    suplementni   go to state 13
    ugao          go to state 14


State 57

   24 ugao: '<' BROJ ',' BROJ ',' . BROJ '>'

    BROJ  shift, and go to state 59


State 58

    9 elementi: elementi ',' izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | izraz . '*' BROJ

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28
    '*'  shift, and go to state 29

    $default  reduce using rule 9 (elementi)


State 59

   24 ugao: '<' BROJ ',' BROJ ',' BROJ . '>'

    '>'  shift, and go to state 60


State 60

   24 ugao: '<' BROJ ',' BROJ ',' BROJ '>' .

    $default  reduce using rule 24 (ugao)
